--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/tablet.css">
     <link rel="stylesheet" href="css/desktop.css">
-    <link rel="stylesheet" href="/fonts/fontawesome-free-5.15.4-web/css/all.css">
+    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.css">
     <title>Thai Binh Travel</title>
 </head>
 <body>
@@ -32,7 +32,7 @@
 
     <header id="header">
         <div class="col-md-12 col-lg-12">
-            <img src="/Images/homes/home.jpg" alt="Dong Chau Beach">
+            <img src="Images/homes/home.jpg" alt="Dong Chau Beach">
         </div>
         <div class="header-text" >
             <h1>KHU DU LỊCH BIỂN ĐỒNG CHÂU</h1>
@@ -44,19 +44,19 @@
         <div class="row image-content">
             <div class="col-md-4 col-lg-4">
                 <a href="#Testimonials_Ngao-Tower">
-                    <img src="/Images/homes/c1.jpg" alt="Thap Ngao">
+                    <img src="Images/homes/c1.jpg" alt="Thap Ngao">
                     <p>Khám Phá Tháp "Ngao"</p>
                 </a>
             </div>
             <div class="col-md-4 col-lg-4">
                 <a href="#Testimonials_Fishermen">
-                    <img src="/Images/homes/c2.jpg" alt="Trai Nghiem Ngu Dan">
+                    <img src="Images/homes/c2.jpg" alt="Trai Nghiem Ngu Dan">
                     <p>Trải Nghiệm Ngư Dân</p>
                 </a>
             </div>
             <div class="col-md-4 col-lg-4">
                 <a href="#Testimonials_see-sunset">
-                    <img src="/Images/homes/c3.jpg" alt="Ngam Hoang Hon">
+                    <img src="Images/homes/c3.jpg" alt="Ngam Hoang Hon">
                     <p>Ngắm Hoàng Hôn</p>
                 </a>
             </div>
@@ -84,8 +84,8 @@
             <div><h1>Trải Nghiệm Du Khách</h1></div>
             <div id="Testimonials_Ngao-Tower" class="row">
                 <div class = "col-lg-6">
-                   <img src="/Images/homes/c1-origin.jpg" alt="Thap Ngao">
-                   <img src="/Images/homes/c1.jpg" alt="Thap Ngao">
+                   <img src="Images/homes/c1-origin.jpg" alt="Thap Ngao">
+                   <img src="Images/homes/c1.jpg" alt="Thap Ngao">
                 </div>
                 <div class="col-lg-6">
                     <p>
@@ -98,8 +98,8 @@
             </div>
             <div id="Testimonials_Fishermen" class="row">
                 <div  class="col-lg-6">
-                    <img src="/Images/homes/c2-origin.jpg" alt="Trai Nghiem Ngu Dan">
-                    <img src="/Images/homes/c2.jpg" alt="Trai Nghiem Ngu Dan">
+                    <img src="Images/homes/c2-origin.jpg" alt="Trai Nghiem Ngu Dan">
+                    <img src="Images/homes/c2.jpg" alt="Trai Nghiem Ngu Dan">
                 </div>
                 <div class="col-lg-6">
                     <p>
@@ -112,8 +112,8 @@
             </div>
             <div id="Testimonials_see-sunset" class="row">
                 <div class="col-lg-6">
-                    <img src="/Images/homes/c3-origin.jpg" alt="Ngam Hoang Hon">
-                    <img src="/Images/homes/c3.jpg" alt="Ngam Hoang Hon">
+                    <img src="Images/homes/c3-origin.jpg" alt="Ngam Hoang Hon">
+                    <img src="Images/homes/c3.jpg" alt="Ngam Hoang Hon">
                 </div>
                 <div class="col-lg-6">
                     <p>
@@ -137,19 +137,19 @@
         <div class="row image-content">
             <div class="col-md-4 col-lg-4">
                 <a href="#">
-                    <img src="/Images/homes/Da Lat.jpg" alt="Da Lat">
+                    <img src="Images/homes/Da Lat.jpg" alt="Da Lat">
                     <p>600$ - Đà Lạt</p>
                 </a>
             </div>
             <div class="col-md-4 col-lg-4">
                 <a href="#">
-                    <img src="/Images/homes/Nha Trang.jpg" alt="Nha Trang">
+                    <img src="Images/homes/Nha Trang.jpg" alt="Nha Trang">
                     <p>650$ - Nha Trang</p>
                 </a>
             </div>
             <div class="col-md-4 col-lg-4">
                 <a href="#">
-                    <img src="/Images/homes/Phu Quoc.jpg" alt="Phu Quoc">
+                    <img src="Images/homes/Phu Quoc.jpg" alt="Phu Quoc">
                     <p>700$ - Phú Quốc</p>
                 </a>
             </div>
@@ -158,19 +158,19 @@
         <div class="row image-content">
             <div class="col-md-4 col-lg-4">
                 <a href="#">
-                    <img src="/Images/homes/TP HCM.jpg" alt="TP HCM">
+                    <img src="Images/homes/TP HCM.jpg" alt="TP HCM">
                     <p>550$ - TP HCM</p>
                 </a>
             </div>
             <div class="col-md-4 col-lg-4">
                 <a href="#">
-                    <img src="/Images/homes/Cat Ba.jpg" alt="Cat Ba">
+                    <img src="Images/homes/Cat Ba.jpg" alt="Cat Ba">
                     <p>300$ - Cát Bà</p>
                 </a>
             </div>
             <div class="col-md-4 col-lg-4">
                 <a href="#">
-                    <img src="/Images/homes/Tay Nguyen.jpg" alt="Tay Nguyen">
+                    <img src="Images/homes/Tay Nguyen.jpg" alt="Tay Nguyen">
                     <p>400$ - Tây Nguyên</p>
                 </a>
             </div>
