--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/tablet.css">
     <link rel="stylesheet" href="css/desktop.css">
-    <link rel="stylesheet" href="/fonts/fontawesome-free-5.15.4-web/css/all.css">
-    <link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.css">
+    <link rel="stylesheet" href="css/blog.css">
     <title>Thai Binh Travel</title>
 </head>
 <body>
@@ -55,7 +55,7 @@
                     Vào khoảng mùa hè từ tháng 7 – 9 du lịch biển Đồng Châu là lý tưởng nhất. 
                     Bởi thời điểm này là mùa hè, ít mưa, rất thích hợp cho các hoạt động bơi lội, vui chơi dưới biển. 
                 </p>
-                <img src="/Images/blogs/blog.jpg" alt="Biên Thái Bình">
+                <img src="Images/blogs/blog.jpg" alt="Biên Thái Bình">
  
                 <p>
                     <strong>2. Phương tiện di chuyển đến biển Đồng Châu</strong>
@@ -65,7 +65,7 @@
                     Tuy nhiên, chúng tôi khuyên bạn khi đi du lịch để chủ động hơn nên chọn những phương tiện cá nhận như xe máy, ô tô để di chuyển. 
                     Nếu chưa có ô tô bạn có thể sử dụng dịch vụ thuê xe tự lái. 
                 </p>
-                <img src="/Images/blogs/blog2.jpg" alt="oto">
+                <img src="Images/blogs/blog2.jpg" alt="oto">
                 <p>
                    <strong>
                        <span>
@@ -81,7 +81,7 @@
                     Sau khi tới Thái Bình bạn đi theo đường QL39B, đi qua thị trấn Tiền Hải để đến Đồng Châu. 
                     Cuối cùng bạn rẽ trái theo tuyến dọc biển là có thể đến bãi biển Đồng Châu.
                 </p>
-                <img src="/Images/blogs/googlemap.png" alt="googlemap">
+                <img src="Images/blogs/googlemap.png" alt="googlemap">
                 
                 <p>
                     <em>Lộ trình 2 :</em>
@@ -111,7 +111,7 @@
                    Nó không phải màu xanh ngắt của các bãi biển thông thường, mà nó mang một màu nâu đặc sánh. 
                    Bạn sẽ được trải nghiệm cảm giác ” tắm bùn” trong làn nước mát vào mỗi dịp hè. 
                 </p>
-                <img src="/Images/blogs/blog3-1.jpg" alt="Biên Thái Bình">
+                <img src="Images/blogs/blog3-1.jpg" alt="Biên Thái Bình">
                 <p>
                    Bên cạnh đó, biển Đồng Châu vào thời điểm bình minh rất ấn tượng. 
                    Cả bãi biển như long lanh một màu óng ả của nền trời và biển, tất cả hòa quyện cùng nhau thành một màu đỏ hồng rực rỡ. 
@@ -129,7 +129,7 @@
                     Đến du lịch biển Đồng Châu bạn sẽ vô cùng ấn tượng với sự đa dạng của hải sản nơi đây. 
                     Các loại hải sản phải kể đến như : Gỏi nhệch, sứa muối, nộm sứa, ngao biển và đặc sắc nhất là món canh cá Quỳnh Côi. 
                 </P>
-                <img src="/Images/blogs/blog3-2.jpeg" alt="Hải Sản ở biển Đồng Châu vô cùng phong phú">
+                <img src="Images/blogs/blog3-2.jpeg" alt="Hải Sản ở biển Đồng Châu vô cùng phong phú">
                 <p>
                     Đi theo con đường biển, bạn còn bắt gặp vô vàn con cáy đỏ, chúng có chiếc càng to bằng nửa thân mình lô nhô và chạy rất nhanh. 
                     Vì vậy, nếu muốn bắt được những con cáy này bạn phải rất khéo léo đấy. 
@@ -147,7 +147,7 @@
                     Do đó, bạn có thể ngủ chòi ở đây và ngắm bình mình vào buổi sáng sớm. 
                     hắc chắn sẽ là hoạt động rất thú vị và mới lạ đấy. 
                 </p>
-                <img src="/Images/blogs/blog3-3.jpg" alt="Ngủ chòi đón bình minh">
+                <img src="Images/blogs/blog3-3.jpg" alt="Ngủ chòi đón bình minh">
                 <p>
                     Đến với Biển Đồng Châu, bên cạnh việc du lịch tắm biển bạn có được trải nghiệm, khám phá những điều mới mẻ. 
                     Do đó nếu muốn tìm địa điểm du lịch biển tự nhiên, đẹp mà vẫn giữ được cái hồn của Biển thì đừng bỏ qua biển Đồng Châu. 
