--- a/tour.html
+++ b/tour.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/tablet.css">
     <link rel="stylesheet" href="css/desktop.css">
-    <link rel="stylesheet" href="/fonts/fontawesome-free-5.15.4-web/css/all.css">
-    <link rel="stylesheet" href="/css/tour.css">
+    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.css">
+    <link rel="stylesheet" href="css/tour.css">
     <title>Thai Binh Travel</title>
 </head>
 <body>
@@ -39,7 +39,7 @@
         <div class="tour-detail-content">
             <div class="tour-infor">
                 <div class="tour-infor-image">
-                    <img src="/Images/tours/tour.jpg" alt="Thap Ngao">
+                    <img src="Images/tours/tour.jpg" alt="Thap Ngao">
                 </div>
                 <p>
                     Biển Đồng Châu thuộc huyện Tiền Hải, cách thành phố Thái Bình 35km theo tỉnh lộ đi Kiến Xương - Tiền Hải. 
@@ -82,7 +82,7 @@
                 <p>
                     14h00: Quý khách tự do đi tàu, xuồng gắn máy ra thăm và tắm biển ở Cồn Thủ và Cồn Vành, hai cồn cát rộng với rừng thông và phi lao xanh ngát.
                 </p>
-                <img src="/Images/tours/day1.jpg" alt="Biên Thái Bình">
+                <img src="Images/tours/day1.jpg" alt="Biên Thái Bình">
             </div>
             <div>
                 <p>
@@ -109,7 +109,7 @@
                 <p>
                     18h30: Về đến Hà Nội. Hướng dẫn OPENTOUR chia tay quý khách. Kết thúc chương trình. Hẹn gặp lại quý khách trong hành trình tiếp theo
                 </p>
-                <img src="/Images/tours/day2.jpg" alt="Biển Thái Bình">
+                <img src="Images/tours/day2.jpg" alt="Biển Thái Bình">
             </div>
         </div>
     </div>
