--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/tablet.css">
     <link rel="stylesheet" href="css/desktop.css">
-    <link rel="stylesheet" href="/fonts/fontawesome-free-5.15.4-web/css/all.css">
-    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.css">
+    <link rel="stylesheet" href="css/contact.css">
     <title>Thai Binh Travel</title>
 </head>
 <body>
