--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/desktop.css">
     <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.css">
     <link rel="stylesheet" href="css/blog.css">
+    <link rel="icon" href="Images/favion.ico">
     <title>Thai Binh Travel</title>
 </head>
 <body>
