--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/tablet.css">
     <link rel="stylesheet" href="css/desktop.css">
     <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.css">
+    <link rel="icon" href="Images/favion.ico">
     <title>Thai Binh Travel</title>
 </head>
 <body>
