--- a/book.html
+++ b/book.html
@@ -37,7 +37,7 @@
         <form action="#">
             <div class="row">
                 <div class="col-md-6 col-lg-6">
-                    <label for="full_name"><i class="fa fa-user"></i> Full Name</label>
+                    <label for="full_name"><i class="fa fa-user"></i> Họ Và Tên</label>
                     <input type="text" id="full_name" name="firstname" placeholder="Nguyễn Văn A">
                 </div>
 
@@ -49,12 +49,12 @@
 
             <div class="row">
                 <div class="col-md-6 col-lg-6">
-                    <label for="address"><i class="fas fa-map-marker-alt"></i> Address</label>
+                    <label for="address"><i class="fas fa-map-marker-alt"></i> Địa Chỉ</label>
                     <input type="text" id="address" name="address" placeholder="99 Nguyễn Chí Thanh">
                 </div>
 
                 <div class="col-md-6 col-lg-6">
-                    <label for="city"><i class="fas fa-city"></i> City</label>
+                    <label for="city"><i class="fas fa-city"></i> Tỉnh/Thành Phố</label>
                     <input type="text" id="city" name="city" placeholder="Hà Nội">
                 </div>
             </div>
