--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="jsjuQtd3lopzYSYQAbAVdYO6Um2tokP7o0vh_FPoOss" />
-    <meta name="description" content="Thai Binh Travel cấp dịch vụ du lịch nghỉ dưỡng cho cá nhân gia đình và hội nhóm.">
+    <meta name="description" content="Thai Binh Travel cung cấp dịch vụ du lịch nghỉ dưỡng cho cá nhân gia đình và hội nhóm.">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/tablet.css">
@@ -110,7 +110,7 @@
                         "Bãi biển này có những triền cát trắng trải dài sóng êm, và những rặng phi lao xanh ngát lộng gió. 
                         Du khách đến đây không chỉ được tắm biển mà còn được mở mang thêm kiến thức về hệ sinh thái biển. 
                         Tìm hiểu đời sống động thực vật biển nơi đây, đời sống văn hóa con người nơi đây. 
-                        Nơi đây còn là tụ điểm tổ chức các cuộc picnic, teambuilding cho các nhóm phuột, các công ty offline."
+                        Nơi đây còn là tụ điểm tổ chức các cuộc picnic, teambuilding cho các nhóm phượt, các công ty offline."
                     </p>
                 </div>
             </div>
